# Sensor

./: Cargo.toml
src/: sensors.rs
src/sensors/: analog_sensor.rs  digital_sensor.rs  sensor.rs
